# yellowtail

./: .gitignore  CMakeLists.txt  README.md
assets/materials/: crate.mat  floor.mat  sphere.mat
assets/models/: cube.glb  floor.glb  sphere.glb
assets/scenes/: main.scene.json
assets/shaders/: Billboard.frag.hlsl  BlinnPhongLit.frag.hlsl  BlinnPhongLit.vert.hlsl  CustomColor.frag.hlsl  DebugLine.vert.hlsl  GridLine.frag.hlsl  GridLine.vert.hlsl  PointShadowDepth.frag.hlsl  PointShadowDepth.vert.hlsl  ShadowDepth.vert.hlsl  Unlit.frag.hlsl
docs/: render-pipeline.md  shaders.md
src/: CMakeLists.txt  main.cpp
src/editor/: Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  main.cpp
src/engine/: Application.h  Component.cpp  Component.h  Constants.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  GameplayStatics.cpp  GameplayStatics.h  Input.cpp  Input.h  Profiling.h  World.cpp  World.h  cgltf_impl.cpp
src/engine/components/: CameraComponent.cpp  CameraComponent.h  FreeMovementComponent.cpp  FreeMovementComponent.h  LightComponent.cpp  LightComponent.h  RenderComponent.cpp  RenderComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  TransformComponent.cpp  TransformComponent.h
src/engine/managers/: PhysicsManager.cpp  PhysicsManager.h  ResourceManager.cpp  ResourceManager.h
src/engine/render/: BillboardRenderer.cpp  BillboardRenderer.h  DebugDraw.cpp  DebugDraw.h  DebugLineRenderer.cpp  DebugLineRenderer.h  JoltDebugRenderer.h  JoltDebugVertex.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PointShadowRenderer.cpp  PointShadowRenderer.h  Texture.cpp  Texture.h
src/engine/serialize/: Archive.h  ComponentRegistry.cpp  ComponentRegistry.h  EnumJson.h  GlmJson.h  SceneSerializer.cpp  SceneSerializer.h
src/engine/utils/: MathUtils.h
src/game/: Game.cpp  Game.h  main.cpp
src/ui/clay/: clay_impl.c  clay_impl.h
